# mts-tech-hack-wiki-lives

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.windows  README.md  docker-compose.windows.yml  docker-compose.yml  run_all.bat  run_all.ps1  run_wikilive.cmd  run_wikilive.ps1  vcpkg.json
.streamlit/: config.toml
build-ninja/: CMakeCache.txt.tmpaaf19
build-safe/: CMakeCache.txt.tmpdd81d
config/: config_loader.cpp  config_loader.h  constants.h
docs/: WikiLive_plan_6_checkpoints.docx  WikiLive_plan_6_checkpoints.md  WikiLive_tracker.docx  WikiLive_tracker.md  WikiLive_tracker.rtf  WikiLive_tracker.txt  index.html
frontend/: app.py  requirements.txt
frontend/ui/: __init__.py  access_panel.py  comments.py  comments_panel.py  comments_script.js  cursors.py  document_card.py  editor_page.py  editor_plugins.py  history_panel.py  insert_panel.py  loading_page.py  mws_blocks.py  page_rail.py  pages_script (2).py  pages_script.py  runtime.py  state.py  theme.py  time_machine.py  time_machine_panel.py  time_machine_script.js  workspace.py
frontend/utils/: __init__.py  api_client.py  document_tools.py  editor_shell.py  prototype_renderer.py  websocket_client.py
scripts/: seed_demo_data.py
src/: main.cpp
src/ai/: ai_context_builder.cpp  ai_context_builder.h  ai_field_verifier.cpp  ai_field_verifier.h  ai_provider.h  ai_provider_factory.cpp  ai_provider_factory.h  ai_service.cpp  ai_service.h  ai_suggestion_validator.cpp  ai_suggestion_validator.h  ai_types.h  ollama_ai_provider.cpp  ollama_ai_provider.h  openrouter_ai_provider.cpp  openrouter_ai_provider.h  openrouter_prompt_builder.cpp  openrouter_prompt_builder.h
src/api/: mws_client.cpp  mws_client.h  retry_policy.cpp  retry_policy.h
src/core/: app_config.cpp  app_config.h  application.cpp  application.h
src/models/: comment_thread.h  page.h  page_version.h  project.h  user.h
src/security/: access_evaluator.cpp  access_evaluator.h
src/server/: http_server.cpp  http_server.h  router.cpp  router.h  websocket_manager.cpp  websocket_manager.h
src/services/: auth_service.cpp  auth_service.h  collaboration_service.cpp  collaboration_service.h  page_service.cpp  page_service.h  project_service.cpp  project_service.h  render_service.cpp  render_service.h
src/storage/: cache.cpp  cache.h  hybrid_page_storage.cpp  hybrid_page_storage.h  in_memory_page_storage.cpp  in_memory_page_storage.h  local_collaboration_storage.cpp  local_collaboration_storage.h  local_file_page_storage.cpp  local_file_page_storage.h  local_file_project_storage.cpp  local_file_project_storage.h  local_user_storage.cpp  local_user_storage.h  mws_page_storage.cpp  mws_page_storage.h  page_storage.cpp  page_storage.h  project_storage.h
src/utils/: errors.cpp  errors.h  logger.cpp  logger.h  string_utils.cpp  string_utils.h  time_utils.cpp  time_utils.h
src/wiki/: wiki_insert.cpp  wiki_insert.h  wiki_parser.cpp  wiki_parser.h  wiki_renderer.cpp  wiki_renderer.h
tests/: test_ai_service.cpp  test_cache.cpp  test_common.h  test_page_service.cpp  test_parser.cpp  test_router.cpp  test_string_utils.cpp
